tests/test120.rael.exp
720
Error [3:9]: factorial expects positive numbers
|         blame "factorial expects positive numbers"
|         ^
